# ipynb-jjsm-tools

./: .gitignore  README.md  pyproject.toml
src/ipynb_jjsm_tools/: __init__.py
src/ipynb_jjsm_tools/download/: __init__.py  s3.py
src/ipynb_jjsm_tools/setup/: __init__.py  dirs.py  plot.py
